Added status as cmd return type